force-app/main/default/staticresources/python/Disappear/src/objects/FPR_Only_Answers__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Error_Message__c</fullName>
        <description>Stores the error message based on the answer responses.</description>
        <label>Answer Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_Amgen_Author_DSR__c</fullName>
        <description>Stores response from the question which appears when the publication is selected as a Data Sharing Request:
&quot;Are there Amgen authors on this publication?&quot;</description>
        <label>Have Amgen Author &amp; DSR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_Amgen_Author__c</fullName>
        <description>Stores the response for question :
&quot;Are there Amgen Author/s on this Publication ?&quot;</description>
        <label>Have Amgen Author</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_data_or_product_materials__c</fullName>
        <description>Stores the response for question : 
&quot;Does the publication include any of the following: 
1. Amgen sponsored data
OR
2. Work that used Amgen-Supplied Products or research materials?&quot;</description>
        <label>Have data or product materials</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_human_study_or_TA_research_MTA__c</fullName>
        <description>Stores response for the question :
&quot;Does the publication include any of the following:
1. Results of an interventional study in humans involving the use of an Amgen product 
or
2. Pre/post-market observational research relevant to Amgen&apos;s therapeutic areas?&quot;</description>
        <label>Have human study or TA research &amp; MTA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_human_study_or_TA_research_No_SOP__c</fullName>
        <description>Stores the response for the question : 
Does the publication include any of the following:
1.Results of an interventional study in humans involving the use of an Amgen product
or  
2. Pre/post-market observational research relevant to Amgen&apos;s therapeutic areas?</description>
        <label>Have human study or TA research &amp; No SOP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Data_Sharing_Request__c</fullName>
        <label>Is Data Sharing Request</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_ISS_Pub__c</fullName>
        <description>Response for question :
&quot;Is this an Investigator Sponsored Study (ISS) Publication ?&quot;</description>
        <label>Is ISS Pub</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_MTA_Pub__c</fullName>
        <description>Stores response for the question :
&quot;Is this a Material Transfer Agreement ?&quot;</description>
        <label>Is MTA Pub</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_partner_led_SOP_exception__c</fullName>
        <description>Stores the response for question;
&quot;Is this a partner-led publication with an SOP exception ?&quot;</description>
        <label>Is partner led SOP exception</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_self_written_and_no_discussion__c</fullName>
        <description>Stores the response for the question:
&quot;If all 3 statements below are true, please answer &quot;Yes&quot;, otherwise answer &quot;No&quot;.
#1: Was written by you or the person you are acting on behalf of .
#2: Does NOT contain discussion of any Amgen marketed or non-marketed products. 
#3: Does NOT contain discussion of any Amgen initiative, process, policy or policy position related to any Amgen marketed or non-marketed products&quot;</description>
        <label>Is self written and no discussion</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ansPublication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>is_CSP__c</fullName>
        <description>Stores the response for question : 
&quot;Is this a CSP?&quot;</description>
        <label>is CSP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>FPR Only Answers</label>
    <nameField>
        <label>Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FPR Only Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>